Fix vertical responsiveness on small devices

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    overflow-x: hidden
 }
 
 section {
@@ -20,6 +21,12 @@ footer {
     color: white;
     text-align: center;
     padding: 80px;
+}
+
+@media only screen and (max-width: 500px){
+    footer h2{
+        font-size: 24px;
+    }
 }
 
 nav {
